--- a/Faerie.Core/Faerie.Core.csproj
+++ b/Faerie.Core/Faerie.Core.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <PackageReference Include="CmlLib.Core" Version="3.3.8" />
     <PackageReference Include="CmlLib.Core.Auth.Microsoft" Version="3.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.58.1" />
     <PackageReference Include="XboxAuthNet.Game.Msal" Version="0.0.6" />
   </ItemGroup>
