--- a/Faerie.Core/Faerie.Core.csproj
+++ b/Faerie.Core/Faerie.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.58.1" />
+    <PackageReference Include="System.Text.Json" Version="8.0.1" />
     <PackageReference Include="XboxAuthNet.Game.Msal" Version="0.0.6" />
   </ItemGroup>
 
