--- a/Faerie.Core/Faerie.Core.csproj
+++ b/Faerie.Core/Faerie.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,14 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CmlLib.Core" Version="3.3.8" />
-    <PackageReference Include="CmlLib.Core.Auth.Microsoft" Version="3.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.58.1" />
-    <PackageReference Include="System.Text.Json" Version="8.0.1" />
-    <PackageReference Include="XboxAuthNet.Game.Msal" Version="0.0.6" />
+    <PackageReference Include="CmlLib.Core" />
+    <PackageReference Include="CmlLib.Core.Auth.Microsoft" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <PackageReference Include="Microsoft.Identity.Client" />
+    <PackageReference Include="System.Text.Json" />
+    <PackageReference Include="XboxAuthNet.Game.Msal" />
   </ItemGroup>
 
 </Project>
